# Imap-testing

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_run.py
src/: .env.example  accounts.py  auth.py  email_parser.py  gmail_oauth.py  imap_client.py  outlook_oauth.py  token_utils.py
src/backend/: main.py
